; ModuleID = '/home/carl/AnghaBench/vlc/modules/keystore/extr_secret.c_dbus_vanished_cb.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/keystore/extr_secret.c_dbus_vanished_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.secrets_watch_data = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, %struct.secrets_watch_data*)* @dbus_vanished_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dbus_vanished_cb(i32* %0, i32* %1, %struct.secrets_watch_data* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.secrets_watch_data*, align 8
  %7 = alloca %struct.secrets_watch_data*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.secrets_watch_data* %2, %struct.secrets_watch_data** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load %struct.secrets_watch_data*, %struct.secrets_watch_data** %6, align 8
  store %struct.secrets_watch_data* %10, %struct.secrets_watch_data** %7, align 8
  %11 = load %struct.secrets_watch_data*, %struct.secrets_watch_data** %7, align 8
  %12 = getelementptr inbounds %struct.secrets_watch_data, %struct.secrets_watch_data* %11, i32 0, i32 0
  store i32 0, i32* %12, align 4
  %13 = load %struct.secrets_watch_data*, %struct.secrets_watch_data** %7, align 8
  %14 = getelementptr inbounds %struct.secrets_watch_data, %struct.secrets_watch_data* %13, i32 0, i32 1
  %15 = call i32 @vlc_sem_post(i32* %14)
  ret void
}

declare dso_local i32 @vlc_sem_post(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
